[tool.poetry]
name = "achmea"
version = "1.0"
description = "This repo contains the code to create a simple LightGBM model to rank hotel searches. This model is built upon Expedia data from a kaggle competition."
authors = ["Paulo"]

[tool.poetry.dependencies]
python = "^3.7"
lightgbm = "*"
streamlit = "^0.70.0"

[tool.poetry.dev-dependencies]
pandas = "^1.1.3"
numpy = "^1.19.3"
ipykernel = "^5.3.4"
flake8 = "^3.8.4"
shap = "^0.36.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
